--- a/lib/index.html
+++ b/lib/index.html
@@ -13,8 +13,6 @@
     <button id="reset" class="button">Reset Game</button>
 </div>
 
-<script src="./js/requests.js"></script>
-<script src="./js/hangman.js"></script>
-<script src="./js/app.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
